fixed entry spacing

--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -5,7 +5,7 @@ $bg-1: #dbe2ef;
 $bg-2: #f9f7f7;
 
 .about-me {
-  padding: 4rem 4rem 0rem 4rem;
+  padding: 0rem 4rem 0rem 4rem;
   background-color: $bg-2;
   h2,
   h3,
@@ -16,7 +16,7 @@ $bg-2: #f9f7f7;
   h2 {
     font-size: 3.5rem;
     color: $l-blue;
-    margin-top: 2rem;
+
     text-align: center;
   }
 
@@ -58,7 +58,6 @@ $bg-2: #f9f7f7;
     }
   }
   .entry-type {
-    font-size: 1.3rem;
     font-weight: 500;
     color: #ef8d32;
     margin-top: 1rem;
@@ -83,7 +82,7 @@ $bg-2: #f9f7f7;
 
 @media screen and (max-width: 865px) {
   .about-me {
-    padding: 4rem 2rem 0rem 2rem;
+    padding: 0rem 2rem 0rem 2rem;
     h2 {
       font-size: 2.5rem;
       padding-bottom: 0rem;
@@ -116,7 +115,6 @@ $bg-2: #f9f7f7;
 
 @media screen and (max-width: 420px) {
   .about-me {
-    padding-top: 2rem;
     h2 {
       font-size: 2rem;
       padding-bottom: 0rem;
