--- a/src/styles/_experience.scss
+++ b/src/styles/_experience.scss
@@ -72,8 +72,8 @@ $bg-2: #f9f7f7;
       padding: 0rem 0rem 3rem 0rem;
       width: 90%;
     }
-    .exp-details {
-      padding-bottom: 1rem;
+    .entry {
+      padding-top: 1rem;
     }
     .exp-container {
       padding: 0rem 1rem 1rem 1rem;
