--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -7,7 +7,7 @@
 }
 
 p {
-  font-size: 1.1 rem !important;
+  font-size: 1rem !important;
 }
 
 body {
@@ -32,6 +32,10 @@ body {
 
 .end {
   padding-bottom: 0rem;
+}
+
+.section {
+  height: 4.5rem;
 }
 
 @media screen and (max-width: 865px) {
